<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="btn_calculate">Calculate Tip</string>
    <string name="et_bill"></string>
    <string name="lblBill">Total Bill</string>
    <string name="etTipPrctg"></string>
    <string name="lblTipPrctg">Tip Percentage</string>
    <string name="etNoPeople"></string>
    <string name="lblNoPeople">No of People</string>
    <string name="etTotalTip"></string>
    <string name="lblTotalTip">Total Tip</string>
    <string name="etTipPerHead"></string>
    <string name="lblTipPerHead">Tip per head</string>

</resources>
