<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculator" >


    <!--  Row 1 -->
    <Button
        android:id="@+id/lblBill"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/lblBill" />

    <EditText
        android:id="@+id/etBill"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/lblBill"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:layout_marginTop="25dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:text="@string/et_bill" />

    <!--  Row 2 -->
    <Button
        android:id="@+id/lblTipPrctg"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:text="@string/lblTipPrctg" />

    <EditText
        android:id="@+id/etTipPrctg"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/etTipPrctg"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:layout_marginTop="100dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:text="@string/etTipPrctg" />
    
    <!--  Row 3 -->
    <Button
        android:id="@+id/lblNoPeople"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="175dp"
        android:text="@string/lblNoPeople" />

    <EditText
        android:id="@+id/etNoPeople"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/etNoPeople"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:layout_marginTop="175dp"
        android:inputType="number"
        android:ems="10"
        android:text="@string/etNoPeople" />
    
     <!--  Row 4 -->
     
      <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblNoPeople"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="onCalculate"
        android:text="@string/btn_calculate" />
     
     <!--  Row 5 -->

    <EditText
        android:id="@+id/etTotalTip"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/etTotalTip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:layout_marginTop="325dp"
        android:inputType="number"
        android:ems="10"
        android:text="@string/etTotalTip" />
    
    <Button
        android:id="@+id/lblTotalTip"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/etTotalTip"
        android:layout_alignLeft="@+id/lblTipPerHead"
        android:layout_marginBottom="14dp"
        android:text="@string/lblTotalTip" />
    
    <!--  Row 6 -->
    
    <EditText
        android:id="@+id/etTipPerHead"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/etTipPerHead"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:layout_marginTop="375dp"
        android:inputType="number"
        android:ems="10"
        android:text="@string/etTipPerHead" />

    <Button
        android:id="@+id/lblTipPerHead"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/etTipPerHead"
        android:layout_alignBottom="@+id/etTipPerHead"
        android:layout_alignLeft="@+id/lblNoPeople"
        android:text="@string/lblTipPerHead" />
    
</RelativeLayout>